# sem3lab2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  TimerAppResources.qrc  addwindow.cpp  addwindow.h  addwindow.ui  alarmswindow.cpp  alarmswindow.h  alarmswindow.ui  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  timer.cpp  timer.h  timerswindow.cpp  timerswindow.h  timerswindow.ui
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_sem3lab2_272722164e.cmake
